# PalSchematica

./: .gitignore  README.md  refresh-schematics-index.bat  wood-test-base.palschem
PalSchematica-phase8e-native-helper-source/: BUILD-INSTALL.md  CMakeLists.txt.example
PalSchematica-phase8e-native-helper-source/PalSchematica/: README.md
PalSchematica-phase8e-native-helper-source/PalSchematica/Scripts/: build_catalog.lua  config.lua  library.lua  main.lua  preview.lua  storage.lua
PalSchematica-phase8e-native-helper-source/PalSchematicaFilesystem/: dllmain.cpp
PalSchematica-phase9b-visible-hud-fix/PalSchematica-phase9-ingame-library/PalSchematica/: README.md
PalSchematica-phase9b-visible-hud-fix/PalSchematica-phase9-ingame-library/PalSchematica/Scripts/: inspector.lua  json.lua  library.lua  logger.lua  main.lua  schematic_preview.lua  ui.lua
PalSchematica-phase9b-visible-hud-fix/PalSchematica-phase9-ingame-library/PalSchematicaFilesystem/: CMakeLists.txt
PalSchematica-phase9b-visible-hud-fix/PalSchematica-phase9-ingame-library/PalSchematicaFilesystem/dlls/: PLACE-COMPILED-DLL-HERE.txt
Schematics/: index.txt  library.palschemlib  ma-base.palschem  native-command.json
Scripts/: config.lua  convert_ue4ss_csv.py  directory_diagnostic.lua  lfs_library.lua  library.lua  main.lua  schematic_loader.lua  spawn_test.lua  storage.lua  ui.lua
